Before01162021/rc-2.yaml
apiVersion: v1
kind: Pod
metadata:
    name: pod1
    labels:
        app: nginx-app
spec:
    containers:
    - name: nginx-container
      image: nginx
