Before01162021/clusteripservice.yaml
# Service
# nginx-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
